fix z-index for resize-control

--- a/quadratic-client/src/app/ui/menus/CodeEditor/ResizeControl.css
+++ b/quadratic-client/src/app/ui/menus/CodeEditor/ResizeControl.css
@@ -1,7 +1,6 @@
 /* Shared styles for the 1px line */
 .resize-control {
   background-color: var(--resize-control-background);
-  z-index: 100;
 }
 
 /* Vertical control, left side */
